removed message from html and placed it in javascript

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -23,6 +23,12 @@
     display: flex;
     justify-content: space-around;
 }
+#instruction {
+    border: none;
+    font-weight: bold;
+    font-size: 42px;
+
+}
 
 .startquiz {
     color: white;
