--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,9 +1,10 @@
 * {
     margin: 20px;
     text-align: center;
+    box-sizing: border-box;
 }
 
-.highscore {
+#header {
     display: flex;
     justify-content: space-between;
 }
@@ -23,13 +24,13 @@
     display: flex;
     justify-content: space-around;
 }
-#information {
+#question {
     border: none;
     font-weight: bold;
     font-size: 42px;
 
 }
-#more-info {
+#question-container {
     font-size: 20px;
 }
 
